# nano-analyst-test

./: Pipfile  README.md  bench_utils.py  pyproject.toml
anagrams/: __init__.py  bench.py  readme.md  test_suite.py
numpy_masks/: __init__.py  readme.md  test_suite.py
pandas_meandiff/: __init__.py  readme.md  test_suite.py
pandas_meandiff/test_data/: df.pickle  expected_mean.pickle
project/: clean.py  format.py  quality.py  tests.py
serial/: datamodels.py  readme.md  test_suite.py  utils.py
